Fix membership card title text wrapping; Add links to free account card

--- a/main/static/css/info/memberships.css
+++ b/main/static/css/info/memberships.css
@@ -10,7 +10,7 @@
 
 .card-title {
     padding: var(--half-content-spacer) 0;
-    width: 80%;
+    width: 90%;
     margin: auto;
 }
 
